--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "morgan": "~1.7.0",
     "passport": "^0.3.2",
     "passport-google-oauth": "^1.0.0",
+    "passport-google-oauth20": "^1.0.0",
     "passport-twitter": "^1.0.4",
     "pug": "^2.0.0-beta6",
     "serve-favicon": "~2.3.0"
